# WITHIN

./: CMakeLists.txt  README.md  main.cpp
Algorithms/BinaryImage/: BinaryImageFactory.h  ImageProcessor.cpp  ImageProcessor.h  Thresholding.cpp  Thresholding.h  ThresholdingGPU.cu  ThresholdingGPU.h
App/: App.cpp  App.h
Camera/: Camera.cpp  Camera.h  CameraCapture.cpp  CameraCapture.h
Core/: ThreadSafeQueue.h
UI/: FPSCounter.h  FactoryUI.h  FrameUI.cpp  FrameUI.h
include/: utils.h
src/: capture.cpp  utils.cpp
